# my_playbooks

./: .gitignore  Dockerfile  README.md  ansible.cfg  inventory  pyproject.toml  requirements.yml  secrets.yml  setup.py
playbooks/: chella_tech.yml  cli.py  gpt_assistant.yml  init_vps.yml
playbooks/apps/: chella_tech.yml  gpt_assistant.yml  mentoroc.yml  oc_mentor_assistant.yml
playbooks/roles/certbot/tasks/: main.yml
playbooks/roles/chella-tech/defaults/: main.yml
playbooks/roles/chella-tech/tasks/: main.yml
playbooks/roles/chella-tech/templates/: nginx.conf.j2
playbooks/roles/create-user/defaults/: main.yml
playbooks/roles/create-user/tasks/: main.yml
playbooks/roles/docker/tasks/: main.yml
playbooks/roles/elk/defaults/: main.yml
playbooks/roles/elk/handlers/: main.yml
playbooks/roles/elk/tasks/: elasticsearch.yml  filebeat.yml  kibana.yml  logstash.yml  main.yml
playbooks/roles/elk/templates/: beats_input_config.j2  elasticsearch_output_config.j2  filebeat_input_config.j2  kibana_nginx_conf.j2
playbooks/roles/firewall/tasks/: main.yml
playbooks/roles/gpt-assistant/defaults/: main.yml
playbooks/roles/gpt-assistant/handlers/: main.yml
playbooks/roles/gpt-assistant/tasks/: main.yml
playbooks/roles/gpt-assistant/templates/: .env.j2  gunicorn_conf.py.j2  gunicorn_start.j2  nginx.conf.j2  systemd.conf.j2
playbooks/roles/mentoroc-webapp/defaults/: main.yml
playbooks/roles/mentoroc-webapp/tasks/: main.yml
playbooks/roles/mentoroc-webapp/templates/: mentoroc-webapp.nginx.conf
ssh_keys/: gptassistant.pub  ocmentorassistant.pub
(+25 files in other folders)
