[project]
name = "playbooks"
version = "0.1.0"
description = "ansible playbooks for vps setup"
dependencies = [
    "ansible==7.4.0",
    "click==8.1.6",
    "simple-term-menu==1.6.1"
]

[project.scripts]
vd = "playbooks.cli:vd"

[tool.setuptools]
packages = ["playbooks"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
